--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,7 +25,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>SmartAssign</title>
+    <title>Arrangist</title>
     <meta name="description" content="Automated time management and scheduling tool." />
 
   </head>
