Chore: Update branding

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Arrangist</title>
-    <meta name="description" content="Automated time management and scheduling tool." />
+    <meta name="description" content="Arrange your life." />
+
+    <!-- OG -->
+
+    <meta property="og:title" content="Arrangist" />
+    <meta property="og:description" content="Arrange your life." />
 
   </head>
 
